--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: "About"
+title: "About Me"
 description: "Hey, I'm Yunkun."
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/inter.jpg"
 ---
 
 <!-- Language Selector -->
