--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: Tags
 layout: default
-description: keep hungry keep foolish
+description: stay hungry, saty foolish
 header-img: "img/tag-bg.jpg"
 ---
 
